src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction__interaction_screen_streaming_locks_input.snap
---
source: src/tui/snapshot_tests/interaction.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #42 ──────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ╭─ you · HH:MM ──────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ implement login                                                                                                    │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ agent · HH:MM ⠋ ──────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Working on it▌                                                                                                     │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"─ [Enter] Send  [Shift+Enter] Newline  [Ctrl+P] /pushup (off)  [Ctrl+L] Clear input  [Ctrl+W] Quit  [Esc] Back  [Up/Dn/P"
"╔══════════════════════════════════════════[ Message (⠋ agent responding…) ]═══════════════════════════════════════════╗"
"║⠿       Agent is responding — input locked…                                                                           ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
