src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction__interaction_screen_terminated_banner.snap
---
source: src/tui/snapshot_tests/interaction.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #42 ──────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ╭─ you · 09:00 ──────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ stop                                                                                                               │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"[Enter] Send  [Shift+Enter] Newline  [Ctrl+P] /pushup (off)  [Ctrl+L] Clear input  [Ctrl+Q] Quit  [Esc] Back            "
"╔════════════════════════════════════════════════════[ Terminated ]════════════════════════════════════════════════════╗"
"║                          Session terminated (user quit). Press any key to return to Issues.                          ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
